//2.55 Changes

//Alpha 60
Fix new combo animation respecting ASkipY
Fix register_used_tiles not respecting ASkipX/Y
Fix tile overwrite protection not respecting ASkipX/Y
Fix tile move not respecting ASkipX/Y
	( Venrob, 7th April, 2020 )

Alpha is now 60
	( Venrob, 6th April, 2020 )

//Alpha 59
Added 'messagedata->TextHeight' and 'messagedata->TextWidth'
	These are shortcuts for 'Text->MessageHeight' and 'Width' respectively.
	Should return the same values; which is the height/width of the message if
	drawn using '->DrawString', with the font set in the messagedata.
Fix the right 'Script Info' button.
Add 'Clear' and 'Clear All' buttons to slot assign dialog.
	'Clear' clears all scripts of the current type.
	'Clear All' clears all scripts, period.
	This is good for clearing scripts for re-organization,
		or clearing scripts from a tileset you don't desire.
	Both clear buttons have a confirmation, to prevent accidental clearing.
Added automatic inlining for internal functions in GlobalSymbols.cpp
	( Venrob, 6th April, 2020 )

Added 'Game->Reload()' to ZScript
	Using this command is similar to 'Game->End()', in that it exits the quest
	without saving. However, instead of going back to the save select screen,
	it will automatically load the current save slot again; effectively reloading
	from the previous save.
Add compile warning for bad reassign calls; the behavior for bad calls
	has not changed, it is simply ignored; but now it will warn the user.
Clean up warning format; now functions will appear in errors/warnings as
	ex. 'npc->Create(float)', instead of prior 'Create(npc[Class 6], float)'
Fix combodata->o_tile interaction with tile moving
Alpha is now 59
	( Venrob, 5th April, 2020 )

//Alpha 58
Fix bitmap->GetPixel for SYSTEM bitmaps not being offset by -10.
	Loading RT_SCREEN through RT_BITMAP6 via Game->LoadBitmapID now 
	works as intended with bitmap->GetPixel(x,y).
Corrected the behaviour of Graphics->GetPixel when working with RT_SCREEN